testsuite/tests/misc/diag_file_end/test.out
== test.lkt ==
test.lkt:5:1: error: Cannot parse <type_decl>
5 | class FooNode implements Node[FooNode] {
  | ^^^^^

test.lkt:7:1: error: Expected '}', got Termination

lkt_compile: Done
